--- a/1pip install stable-baselines3.ipynb
+++ b/1pip install stable-baselines3.ipynb
@@ -44,7 +44,7 @@
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
       "Collecting stable_baselines3\n",
-      "  Downloading stable_baselines3-2.4.0-py3-none-any.whl.metadata (4.5 kB)\n",
+      "  Downloading stable_baselines3-2.4.1-py3-none-any.whl.metadata (4.5 kB)\n",
       "Collecting gymnasium<1.1.0,>=0.29.1 (from stable_baselines3)\n",
       "  Downloading gymnasium-1.0.0-py3-none-any.whl.metadata (9.5 kB)\n",
       "Requirement already satisfied: numpy<2.0,>=1.20 in /usr/local/lib/python3.8/dist-packages (from stable_baselines3) (1.22.2)\n",
@@ -101,13 +101,13 @@
       "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.7->matplotlib->stable_baselines3) (1.16.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.8/dist-packages (from jinja2->torch>=1.13->stable_baselines3) (2.1.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.8/dist-packages (from sympy->torch>=1.13->stable_baselines3) (1.3.0)\n",
-      "Downloading stable_baselines3-2.4.0-py3-none-any.whl (183 kB)\n",
+      "Downloading stable_baselines3-2.4.1-py3-none-any.whl (183 kB)\n",
       "Downloading gymnasium-1.0.0-py3-none-any.whl (958 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m958.1/958.1 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m958.1/958.1 kB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading torch-2.4.1-cp38-cp38-manylinux1_x86_64.whl (797.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m797.1/797.1 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:15\u001b[0mm\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m797.1/797.1 MB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:02\u001b[0m\n",
       "\u001b[?25hDownloading nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl (410.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m410.6/410.6 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:03\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m410.6/410.6 MB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:02\u001b[0m\n",
       "\u001b[?25hDownloading nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl (14.1 MB)\n",
       "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.1/14.1 MB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25hDownloading nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl (23.7 MB)\n",
@@ -141,7 +141,7 @@
       "torch-tensorrt 1.3.0a0 requires torch<1.14.0,>=1.13.0.dev0, but you have torch 2.4.1 which is incompatible.\n",
       "torchtext 0.13.0a0+fae8e8c requires torch==1.13.0a0+936e930, but you have torch 2.4.1 which is incompatible.\n",
       "torchvision 0.15.0a0 requires torch==1.13.0a0+936e930, but you have torch 2.4.1 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed farama-notifications-0.0.4 gymnasium-1.0.0 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.6.85 nvidia-nvtx-cu12-12.1.105 stable_baselines3-2.4.0 torch-2.4.1 triton-3.0.0\n",
+      "\u001b[0mSuccessfully installed farama-notifications-0.0.4 gymnasium-1.0.0 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.6.85 nvidia-nvtx-cu12-12.1.105 stable_baselines3-2.4.1 torch-2.4.1 triton-3.0.0\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable.It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
@@ -236,8 +236,8 @@
      "output_type": "stream",
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: stable-baselines3[sb3_contrib] in /usr/local/lib/python3.8/dist-packages (2.4.0)\n",
-      "\u001b[33mWARNING: stable-baselines3 2.4.0 does not provide the extra 'sb3-contrib'\u001b[0m\u001b[33m\n",
+      "Requirement already satisfied: stable-baselines3[sb3_contrib] in /usr/local/lib/python3.8/dist-packages (2.4.1)\n",
+      "\u001b[33mWARNING: stable-baselines3 2.4.1 does not provide the extra 'sb3-contrib'\u001b[0m\u001b[33m\n",
       "\u001b[0mRequirement already satisfied: gymnasium<1.1.0,>=0.29.1 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3[sb3_contrib]) (1.0.0)\n",
       "Requirement already satisfied: numpy<2.0,>=1.20 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3[sb3_contrib]) (1.22.2)\n",
       "Requirement already satisfied: torch>=1.13 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3[sb3_contrib]) (2.4.1)\n",
@@ -305,7 +305,7 @@
       "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
       "Collecting sb3-contrib\n",
       "  Downloading sb3_contrib-2.4.0-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: stable-baselines3<3.0,>=2.4.0 in /usr/local/lib/python3.8/dist-packages (from sb3-contrib) (2.4.0)\n",
+      "Requirement already satisfied: stable-baselines3<3.0,>=2.4.0 in /usr/local/lib/python3.8/dist-packages (from sb3-contrib) (2.4.1)\n",
       "Requirement already satisfied: gymnasium<1.1.0,>=0.29.1 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3<3.0,>=2.4.0->sb3-contrib) (1.0.0)\n",
       "Requirement already satisfied: numpy<2.0,>=1.20 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3<3.0,>=2.4.0->sb3-contrib) (1.22.2)\n",
       "Requirement already satisfied: torch>=1.13 in /usr/local/lib/python3.8/dist-packages (from stable-baselines3<3.0,>=2.4.0->sb3-contrib) (2.4.1)\n",
@@ -428,7 +428,7 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.8/dist-packages (from jinja2->torch==2.4.1->torchvision) (2.1.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.8/dist-packages (from sympy->torch==2.4.1->torchvision) (1.3.0)\n",
       "Downloading torchvision-0.19.1-cp38-cp38-manylinux1_x86_64.whl (7.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.0/7.0 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.0/7.0 MB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
       "\u001b[?25hInstalling collected packages: torchvision\n",
       "Successfully installed torchvision-0.19.1\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable.It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
