--- a/optimize_hyperparameter.ipynb
+++ b/optimize_hyperparameter.ipynb
@@ -7,7 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from logger import setup_logger\n",
+    "import sys\n",
+    "import logging\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "from utils.logger import setup_logger\n",
     "\n",
     "# 로거 설정\n",
     "log_file = setup_logger()\n",
