테스트 성공, 메인으로 업데이트

--- a/optimize_hyperparameter.ipynb
+++ b/optimize_hyperparameter.ipynb
@@ -257,8 +257,8 @@
     "        return True  # 학습 계속\n",
     "\n",
     "batch_size = 1\n",
-    "target_dir = 'dataset/'\n",
-    "#target_dir = '/nfs/dataset/DIV2K/DIV2K_train_HR/DIV2K_train_HR/'\n",
+    "#target_dir = 'dataset/'\n",
+    "target_dir = '/nfs/dataset/DIV2K/DIV2K_train_HR/DIV2K_train_HR/'\n",
     "valid_dir = '/nfs/dataset/DIV2K/DIV2K_valid_HR/DIV2K_valid_HR/'\n",
     "meta = {'wl': (515e-9), 'dx': (7.56e-6, 7.56e-6)}  # 메타 정보\n",
     "padding = 0\n",
@@ -325,7 +325,7 @@
     "        trial_env = VecNormalize(trial_env, norm_obs=True, norm_reward=True, clip_obs=10.0)\n",
     "\n",
     "        model = PPO(\n",
-    "            \"MlpPolicy\",\n",
+    "            \"MultiInputPolicy\",\n",
     "            trial_env,\n",
     "            verbose=0,\n",
     "            n_steps=n_steps,\n",
