--- a/train-800.ipynb
+++ b/train-800.ipynb
@@ -3289,6 +3289,7 @@
     "import glob\n",
     "import shutil\n",
     "from datetime import datetime\n",
+    "import time\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
