--- a/optimize_hyperparameter.ipynb
+++ b/optimize_hyperparameter.ipynb
@@ -24,6 +24,7 @@
     "import glob\n",
     "import shutil\n",
     "from datetime import datetime\n",
+    "import time\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
