--- a/valid.ipynb
+++ b/valid.ipynb
@@ -413,6 +413,7 @@
     "import glob\n",
     "import shutil\n",
     "from datetime import datetime\n",
+    "import time\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
