텐서보드 기반 데이터 그래프 생성 코드

--- a/tensor/plot_tensor.ipynb
+++ b/tensor/plot_tensor.ipynb
@@ -15,7 +15,7 @@
     "import os\n",
     "\n",
     "# 같은 폴더에 있는 TensorBoard 로그 파일의 이름을 자동으로 검색\n",
-    "log_dir = \".\"  # 현재 폴더\n",
+    "log_dir = \"..\"  # 현재 폴더\n",
     "event_file = [f for f in os.listdir(log_dir) if f.startswith(\"events.out\")]\n",
     "\n",
     "if not event_file:\n",
